--- a/vita/package.json
+++ b/vita/package.json
@@ -12,7 +12,8 @@
     "init": "^0.1.2",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
