--- a/vita/.env.example
+++ b/vita/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://username:password@localhost:5432/dbname?schema=public"
+DATABASE_URL="postgresql://vita:123@localhost:5432/dbname?schema=public"
