chore: updated docker configuration and applied user migration

--- a/vita/docker-compose.yml
+++ b/vita/docker-compose.yml
@@ -2,15 +2,17 @@ version: "3.8"
 services:
   db:
     image: postgres
-    container_name: local_pgdb
+    container_name: postgres
     restart: always
     ports:
-      - "5432:5432"
+      - "5434:5432"
     environment:
       POSTGRES_USER: vita
       POSTGRES_PASSWORD: 123
+      POSTGRES_DB: vita
+      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
-      - local_pgdata:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin4_container
@@ -24,5 +26,5 @@ services:
       - pgadmin-data:/var/lib/pgadmin
 
 volumes:
-  local_pgdata:
+  postgres_data:
   pgadmin-data:
