--- a/vita/package.json
+++ b/vita/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
-    "@prisma/client": "^5.12.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "init": "^0.1.2",
     "lucide-react": "^0.356.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
@@ -29,6 +32,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18",
