--- a/vita/package.json
+++ b/vita/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.1",
     "init": "^0.1.2",
     "lucide-react": "^0.356.0",
     "next": "14.1.0",
@@ -24,7 +25,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-responsive": "^10.0.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
