--- a/vita/package.json
+++ b/vita/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^5.0.1",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
