--- a/vita/package.json
+++ b/vita/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-generate": "npx prisma generate",
+    "prisma-migrate": "npx prisma migrate dev --name"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
