--- a/vita/.env.example
+++ b/vita/.env.example
@@ -1,1 +1,8 @@
 DATABASE_URL="postgresql://vita:123@localhost:5432/dbname?schema=public"
+OPEN_API_KEY=
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+GOOGLE_ID=
+GOOGLE_SECRET=
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
