--- a/vita/package.json
+++ b/vita/package.json
@@ -27,6 +27,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-navigation": "^1.0.6",
+    "openai": "^4.33.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
