--- a/vita/package.json
+++ b/vita/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-responsive": "^10.0.0",
+    "sst": "^3.0.13",
     "sweetalert2": "^11.10.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
