--- a/vita/package.json
+++ b/vita/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
