--- a/vita/.env.example
+++ b/vita/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV=""
 DATABASE_URL="postgresql://vita:123@localhost:5432/dbname?schema=public"
 OPEN_API_KEY=
 FACEBOOK_ID=
@@ -6,3 +7,4 @@ GOOGLE_ID=
 GOOGLE_SECRET=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
+NEXTAUTH_PUBLIC_SECRET=
