--- a/vita/package.json
+++ b/vita/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "sweetalert2": "^11.10.7",
     "tailwind-merge": "^2.2.1",
@@ -45,6 +46,7 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.4.18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
