--- a/vita/tsconfig.json
+++ b/vita/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/auth/route.tss", "migrate.mtss", "app/api/reminders/[idReminders]"],
-  "exclude": ["node_modules","sst.config.ts"]
+  "exclude": ["node_modules","sst.config.ts","sst.config.ts"]
 }
