--- a/vita/package.json
+++ b/vita/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "sst": "ion",
