--- a/vita/package.json
+++ b/vita/package.json
@@ -19,6 +19,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
@@ -32,6 +33,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
     "embla-carousel-react": "^8.0.1",
+    "headlessui": "^0.0.0",
     "init": "^0.1.2",
     "lucide-react": "^0.356.0",
     "next": "14.1.0",
