--- a/vita/package.json
+++ b/vita/package.json
@@ -19,6 +19,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@google/generative-ai": "^0.9.0",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
