--- a/vita/package.json
+++ b/vita/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
+    "react-phone-input-2": "^2.15.1",
     "react-responsive": "^10.0.0",
     "sst": "ion",
     "sweetalert2": "^11.10.7",
