--- a/vita/package.json
+++ b/vita/package.json
@@ -44,6 +44,7 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
