--- a/vita/package.json
+++ b/vita/package.json
@@ -51,6 +51,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
+    "react-speech-recognition": "^3.10.0",
     "sst": "ion",
     "sweetalert2": "^11.10.7",
     "tailwind-merge": "^2.2.1",
