--- a/vita/package.json
+++ b/vita/package.json
@@ -22,6 +22,7 @@
     "@google/generative-ai": "^0.9.0",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
