--- a/vita/package.json
+++ b/vita/package.json
@@ -17,12 +17,14 @@
     "@aws-sdk/client-s3": "^3.563.0",
     "@aws-sdk/s3-request-presigner": "^3.563.0",
     "@clerk/nextjs": "^4.29.9",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google/generative-ai": "^0.9.0",
     "@headlessui/react": "^1.7.19",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/icons-material": "^5.15.17",
+    "@mui/icons-material": "^5.15.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
