--- a/vita/package.json
+++ b/vita/package.json
@@ -37,9 +37,11 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
     "embla-carousel-react": "^8.0.1",
+    "formidable": "^3.5.1",
     "headlessui": "^0.0.0",
     "init": "^0.1.2",
     "lucide-react": "^0.356.0",
+    "mv": "^2.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-navigation": "^1.0.6",
@@ -58,17 +60,20 @@
     "sweetalert2": "^11.10.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.30",
     "@types/pg": "^8.11.5",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
