--- a/vita/package.json
+++ b/vita/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
@@ -48,6 +49,7 @@
     "openai": "^4.33.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
+    "puppeteer": "^22.10.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
