--- a/vita/.eslintrc.json
+++ b/vita/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/strict",
+    "plugin:jsx-a11y/recommended",
+    "plugin:testing-library/react",
+    "next"
+  ],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "testing-library"],
+  "rules": {
+    
+  }
 }
