--- a/vita/package.json
+++ b/vita/package.json
@@ -10,7 +10,9 @@
     "drizzle:generate-migration": "drizzle-kit generate:pg",
     "lint": "next lint",
     "sst-dev": "NO_BUN=true sst dev next dev",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest",
+    "test:ci": "vitest run --coverage"
   },
   "dependencies": {
     "@aws-sdk/client-rds-data": "^3.556.0",
@@ -67,6 +69,9 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.30",
@@ -75,13 +80,20 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.3.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.18",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-testing-library": "^6.2.2",
+    "jsdom": "^24.0.0",
+    "msw": "^2.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.6.0"
   }
 }
