--- a/vita/package.json
+++ b/vita/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@types/recharts": "^1.8.29",
     "axios": "^1.6.7",
+    "axios-mock-adapter": "^1.22.0",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
