--- a/vita/.eslintrc.json
+++ b/vita/.eslintrc.json
@@ -1,15 +1,13 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "prettier",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/strict",
     "plugin:jsx-a11y/recommended",
+    "plugin:prettier/recommended",
+    "next",
     "plugin:testing-library/react",
-    "next"
   ],
   "plugins": ["@typescript-eslint", "jsx-a11y", "testing-library"],
-  "rules": {
-    
-  }
+  "rules": {}
 }
