--- a/vita/package.json
+++ b/vita/package.json
@@ -2,6 +2,7 @@
   "name": "vita",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -10,7 +11,9 @@
     "drizzle:generate-migration": "drizzle-kit generate:pg",
     "drizzle:seed": "tsx db/seed.ts",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "sst-dev": "NO_BUN=true sst dev next dev",
+    "prepare": "husky ./.husky || true",
     "start": "next start",
     "test": "vitest",
     "test:ci": "vitest run --coverage"
@@ -87,6 +90,8 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
@@ -94,10 +99,16 @@
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.3.0",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.3",
