Fixed deployment errors

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "dev": "next dev",
     "drizzle-kit": "drizzle-kit",
-    "drizzle:apply-migration": "tsx db/migrate.ts",
+    "drizzle:apply-migration": "tsx src/db/migrate.ts",
     "drizzle:generate-migration": "drizzle-kit generate:pg",
-    "drizzle:seed": "tsx db/seed.ts",
+    "drizzle:seed": "tsx src/db/seed.ts",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "sst-dev": "NO_BUN=true sst dev next dev",
