Changed video libraries

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sparticuz/chromium": "^123.0.1",
     "@types/recharts": "^1.8.29",
     "axios": "^1.6.7",
     "axios-mock-adapter": "^1.22.0",
@@ -58,6 +59,7 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "puppeteer": "^22.10.0",
+    "puppeteer-core": "^22.10.0",
     "reacharts": "^0.4.5",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
