--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches: main
     paths-ignore:
       - '**.md'
+      
+env:
+  NEXTAUTH_URL: https://d8vd0r6uuds8z.cloudfront.net
+  NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.run_number }}
@@ -24,7 +28,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::851725431297:role/Github
@@ -44,10 +48,11 @@ jobs:
           wget https://github.com/sst/ion/releases/download/v0.0.193/sst-linux-amd64.deb
           sudo dpkg -i sst-linux-amd64.deb
           sst version
-
+      
+      - name: Install Bun
       - uses: oven-sh/setup-bun@v1
 
-      - name: deploy
+      - name: Deploy with SST
         run: |
           bun install
           sst deploy --stage=juliomeza2510 --verbose
