--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           sst version
       
       - name: Install Bun
-      - uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v1
 
       - name: Deploy with SST
         run: |
