--- a/package.json
+++ b/package.json
@@ -19,34 +19,31 @@
     "test:ci": "vitest run --coverage"
   },
   "dependencies": {
-    "@aws-sdk/client-rds-data": "^3.556.0",
-    "@aws-sdk/client-s3": "^3.563.0",
-    "@aws-sdk/s3-request-presigner": "^3.563.0",
-    "@clerk/nextjs": "^4.29.9",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@aws-sdk/client-rds-data": "^3.588.0",
+    "@aws-sdk/client-s3": "^3.588.0",
+    "@aws-sdk/s3-request-presigner": "^3.588.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@google/generative-ai": "^0.9.0",
     "@headlessui/react": "^1.7.19",
-    "@hookform/resolvers": "^3.3.4",
-    "@mui/icons-material": "^5.15.18",
+    "@hookform/resolvers": "^3.4.2",
+    "@mui/icons-material": "^5.15.19",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@sparticuz/chromium": "^123.0.1",
     "@types/recharts": "^1.8.29",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "axios-mock-adapter": "^1.22.0",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.10",
-    "embla-carousel-react": "^8.0.1",
+    "drizzle-orm": "^0.31.0",
+    "embla-carousel-react": "^8.1.3",
     "formidable": "^3.5.1",
     "headlessui": "^0.0.0",
     "init": "^0.1.2",
@@ -55,29 +52,29 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-navigation": "^1.0.6",
-    "openai": "^4.33.0",
+    "openai": "^4.47.3",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "puppeteer": "^22.10.0",
     "puppeteer-core": "^22.10.0",
     "reacharts": "^0.4.5",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
-    "react-icons": "^5.0.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-speech-recognition": "^3.10.0",
     "recharts": "^2.12.7",
-    "sst": "ion",
-    "sweetalert2": "^11.10.7",
-    "tailwind-merge": "^2.2.1",
+    "sst": "^3.0.32",
+    "sweetalert2": "^11.11.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "yup": "^1.4.0",
-    "zod": "^3.22.4",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
@@ -86,10 +83,10 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
     "@types/formidable": "^3.4.5",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.11.5",
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.13.0",
+    "@types/pg": "^8.11.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "@types/react-speech-recognition": "^3.9.5",
     "@types/uuid": "^9.0.8",
@@ -98,24 +95,24 @@
     "@vitejs/plugin-react": "^4.3.0",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
-    "autoprefixer": "^10.4.18",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.18",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^9.0.11",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.0",
     "lint-staged": "^15.2.5",
-    "msw": "^2.3.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.6.0",
-    "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.3",
+    "msw": "^2.3.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.11.0",
+    "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   }
 }
