--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prepare": "husky ./.husky || true",
     "start": "next start",
     "test": "vitest",
-    "test:ci": "vitest run --coverage"
+    "test:ci": "vitest run --coverage",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@aws-sdk/client-rds-data": "^3.588.0",
@@ -98,6 +99,7 @@
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "autoprefixer": "^10.4.19",
+    "cypress": "^13.10.0",
     "drizzle-kit": "^0.20.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
