--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postgres": "^3.4.4",
     "puppeteer": "^22.10.0",
     "puppeteer-core": "^22.10.0",
+    "raw-body": "^2.5.2",
     "reacharts": "^0.4.5",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -72,6 +73,7 @@
     "react-speech-recognition": "^3.10.0",
     "recharts": "^2.12.7",
     "sst": "^3.0.32",
+    "stripe": "^15.9.0",
     "sweetalert2": "^11.11.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
