--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,6 @@ on:
 env:
   NEXTAUTH_URL: https://d8vd0r6uuds8z.cloudfront.net
   NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
-  TZ: 'CST'
 
 jobs:
   deploy:
@@ -41,7 +40,7 @@ jobs:
         run: npm install
 
       - name: Run linters
-        run: npm run lint:fix
+        run: npm run lint
 
       - name: Run tests
         run: npm run test:ci
